Fixed cursor for grabbing viewer not showing correct

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -2347,7 +2347,7 @@ body {
 }
 
 #referencesContainer:active {
-  cursor: grab;
+  cursor: grabbing !important;
 }
 
 .renameButton {
